--- a/package.json
+++ b/package.json
@@ -28,9 +28,10 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.14.11",
     "dotenv": "^16.4.5",
-    "eslint": "^9.7.0",
+    "eslint": "^8.57.0",
     "globals": "^15.8.0",
     "nodemon": "^3.1.4",
     "ts-node": "^10.9.2",
