--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "code-snippet-backend",
   "version": "1.0.0",
   "description": "code snippet app for the productive users",
-  "main": "src/index.js",
+  "main": "index.js",
   "scripts": {
     "build": "npx tsc",
     "start": "node dist/index.js",
