--- a/package.json
+++ b/package.json
@@ -2,10 +2,8 @@
   "name": "code-snippet-backend",
   "version": "1.0.0",
   "description": "code snippet app for the productive users",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "build": "npx tsc",
-    "start": "node dist/index.js",
     "dev": "nodemon src/index.ts"
   },
   "author": "",
