--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "code snippet app for the productive users",
   "main": "src/index.js",
   "scripts": {
+    "build": "npx tsc",
     "start": "node src/index.js",
     "dev": "nodemon src/index.ts"
   },
