--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "npx tsc",
     "start": "node src/index.js",
-    "dev": "nodemon src/index.ts"
+    "dev": "nodemon src/index.ts",
+    "stage": "tsc && git status && git add ."
   },
   "author": "",
   "license": "ISC",
