--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "build": "npx tsc",
-    "start": "node src/index.js",
+    "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
     "stage": "tsc && git status && git add ."
   },
